# c_basics

./: AlarmSignal.c  Bitmasks.c  BitwiseOperations.c  CMakeLists.txt  ControllingTerminal.c  DontRunThis.c  EndiannessConversion.c  Exec.c  FIFO.c  FetchUnixStreamSocketAddress.c  FileIO.c  Forking.c  FunctionPointers.c  GettingAndModifyingLocationInFile.c  Gotos.c  HeaderIntroduction.c  HeaderIntroduction.h  LinkedList.c  MemoryManagement.c  MemoryMapping.c  MemoryResidence.c  MessageQueues.c  Pipes.c  PointerArithmetic.c  Pointers.c  PosixThreads.c  PreProcessorDirectives.c  ProcessGroups.c  Putchar&Ungetc.c  QuickAndDirtyPortableFloatingPoint.c  README.md  Setbuf&Setvbuf.c  StackAllocation.c  StreamOrientation.c  SystemVMessageQueues.c  TelnetServerPollingFileDescriptorsWithUnixStreamStreamSockets.c  UnixDatagramSocketBroadcaster.c  UnixDatagramSocketClient.c  UnixDatagramSocketServer.c  UnixFileEventWatching.c  (+20 more)
ElfFiles/: ProgramToBeTraced.c  binary.txt  myprogram  objectfile
MichaelKerriskCode/: README.md  get_num.c  get_num.h
